# netology-hw-dsmgmt

./: .gitignore  README.md  pyproject.toml
data/processed/: data.csv
docs/: model.ipynb
model/: keras_metadata.pb  saved_model.pb
model/variables/: variables.data-00000-of-00001  variables.index
source/: _data.py  _model.py
