[tool.poetry]
name = "Wine Analisys"
version = "1.0"
description = "Модель для предсказания качества вина по его физико-химическому анализу (учебный проект)"
authors = ["Alexander Bogdanov <exiper@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
matplotlib = "^3.5.1"
ipykernel = "5.1"
jupyterlab = "^3.4.3"
jupyter = "^1.0.0"
seaborn = "^0.11.2"
kaggle = "^1.5.12"
tensorflow = "^2.10.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
